<resources>
    <string name="app_name">Shop</string>
    <string name="userEt">NickName</string>
    <string name="pwdEt">Password</string>
    <string name="loginBtn">Log In</string>
    <string name="searchEt">Search a Product</string>
    <string name="search">Search</string>
    <string name="filterTv">Filter</string>
    <string name="favouritesTv">Your favourites products</string>
    <string name="shoppingListTv">Shopping list</string>
    <string name="searchShopListBtn">Keep Searching</string>
    <string name="buyBtn">BUY</string>
    <string name="wellcome">Wellcome back %s :3</string>
    <string name="dataBtn">My Data</string>
    <string name="historyBtn">Buy History</string>
    <string name="becomeSaleBtn">Become a Partner</string>
    <string name="historySaleBtn">Sale History</string>
    <string name="usersAdminBtn">See All Users</string>
    <string name="nameTv">Name: %s</string>
    <string name="surnameTv">Surname: %s</string>
    <string name="mailTv">Electronic mail: %s</string>
    <string name="phoneTv">Phone %s</string>
    <string name="addressTv">Address: %s</string>
    <string name="changePwdBtn">Change My Password</string>
    <string name="oldPwdTv">Password change</string>
    <string name="oldPwdEt">Introduce your old password</string>
    <string name="confirmOldPwdEt">Confirm your old password</string>
    <string name="newPwdTv">Introduce your new password</string>
    <string name="blankInsert">%s</string>
    <string name="priceInsert">Price: %s €</string>
    <string name="saleInsert">SALE %s </string>
    <string name="nameInsert">Name: %s </string>
    <string name="categoryInsert">Category: %s </string>
    <string name="unitsInExistenceInsert">Units in existence: %s </string>
    <string name="unitsSoldInsert">Units sold: %s </string>
    <string name="back">Go back</string>
    <string name="alertServerError">There has been a problem with the server,
        try again later :D</string>
    <string name="alertIncorrectPwd">The two Passwords do not coincide</string>
    <string name="alertEmpty">You must fill all the data</string>
    <string name="alertIncorrect">The user doesn\'t exist or the password was incorrect</string>
    <string name="alertEmptyResult">There is no products by theses parameters</string>
    <string name="addToCartBtn">Add to the shopping cart</string>
    <string name="chooseFilter">Choose a filter</string>
    <string name="optionNameAsc">A-Z</string>
    <string name="optionNameDesc">Z-A</string>
    <string name="optionPriceAsc">Expensive first</string>
    <string name="optionPriceDesc">Cheap first</string>
    <string name="optionSellsAsc">Best Sellers first</string>
    <string name="optionSellsDesc">Worst Sellers first</string>
    <string name="searchBtn">Search Products</string>
    <string name="quantity">Quantity</string>
    <string name="quantityShp">Quantity: %s</string>
    <string name="finalPrice">Final price: %s</string>
    <string name="likes">Your Favourite Products</string>
    <string name="logOutBtn">Log Out</string>
    <string name="alertLogOut">Do you want to Log Out?</string>
    <string name="yes">YES</string>
    <string name="no">NO</string>
    <string name="ok">OK</string>
    <string name="pwdConfirmation">Your password was successfully changed</string>
    <string name="pwdIncorrectSrv">The introduced Password is incorrect, try again</string>
    <string name="nameChng">Name</string>
    <string name="surnameChng">Surname</string>
    <string name="mailChng">Mail</string>
    <string name="phoneChng">Phone</string>
    <string name="addressChng">Address</string>
    <string name="chngBtn">CHANGE</string>
    <string name="chngTv">Change Your Data As You Please</string>
    <string name="chngTip">Its not obligatory to fill all the fields</string>
    <string name="alertEmptyChange">You need to fill at least one field</string>
    <string name="successfullChange">Your data was successfully changed</string>
    <string name="dateIns">Date: %s</string>
    <string name="historyTV">Your History</string>
    <string name="optionOneWeek">Last Week</string>
    <string name="optionOneMonth">Last Month</string>
    <string name="optionOneYear">Last Year</string>
    <string name="optionMsgDate">Choose a Period</string>
    <string name="optionMsgQuantity">Choose a quantity</string>
    <string name = "alertDateQuantity">You must specify a Period and a Quantity</string>
    <string name="priceAddProd">Price</string>
    <string name="unitsAddProd">Units</string>
    <string name="categoryAddProd">Category</string>
    <string name="saleAddProd">Sale</string>
    <string name="addProdBtn">Add Product</string>
    <string name="optionCategoryAddProd">Insert a new one…</string>
    <string name="titleAddProd">Add a New Product</string>
    <string name="titleRestockHistory">Restock History</string>
    <string name="titleEditProd">Edit a Product</string>
    <string name="titleSales">Sales History</string>
    <string name="confAddProd">Your Product was successfully added. Do you want to add another one?</string>
    <string name="confEditProd">Your Product was successfully edited.</string>
    <string name="confRestock">Your Restock was successfull.</string>
    <string name="alertPriceLow">The price cannot be zero or below</string>
    <string name="alertPriceHigh">The price cannot be higher than 10.000</string>
    <string name="alertUnitsLow">The units provided cannot be zero or below</string>
    <string name="alertUnitsHigh">The units provided cannot be higher that 1.000</string>
    <string name="alertSaleLow">The Sale cannot be below zero</string>
    <string name="alertSaleHigh">The Sale cannot be higher that 99</string>
    <string name ="titleMakeRestock">Choose a product and how much will you restock</string>
    <string name="restockBtn">Restock</string>
    <string name="buyerName">Buyer Name: %s</string>
    <string name="partnerBtn">Partner options</string>
    <string name="partnerSales">Your Sales</string>
    <string name="partnerProducts">Your Products</string>
    <string name="partnerAddProducts">Add Products</string>
    <string name="partnerEditProduct">Edit a Product</string>
    <string name="partnerMakeRestock">Make a Restock</string>
    <string name="partnerRestockHistory">Restock History</string>
    <string name="partnerConf">Are You sure to be a Partner</string>
    <string name="partnerAddSomeProducts">Congratulations, now you are a Partner!
        Do you want to add some Products to sell?</string>
</resources>