<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cardViewBuy"
    android:layout_width="200dp"
    android:layout_height="275dp"
    app:cardBackgroundColor="#FFE57F">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/saleCardImageView"
            android:layout_width="198dp"
            android:layout_height="181dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/tv" />

        <TextView
            android:id="@+id/saleCardNameTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nameInsert"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/saleCardImageView" />

        <TextView
            android:id="@+id/saleCardQuantityTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="55dp"
            android:text="@string/quantityShp"
            app:layout_constraintStart_toEndOf="@+id/saleCardNameTv"
            app:layout_constraintTop_toBottomOf="@+id/saleCardImageView" />

        <TextView
            android:id="@+id/saleCardDateTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/dateIns"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/saleCardNameTv" />

        <TextView
            android:id="@+id/saleCardBuyerNameTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/buyerName"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/saleCardDateTv" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>